fixing overflowing on mobile

--- a/style.css
+++ b/style.css
@@ -276,9 +276,6 @@
         /* width: inherit !important; */
         /* height: auto !important; */
     }
-    .row {
-        overflow: overlay;
-    }
 }
 
 
